[package]
name = "wellness_bulletin"
version = "0.0.1"
authors = ["Zack M. Davis <code@zackmdavis.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
