[package]
name = "wellness_bulletin"
version = "0.0.1"
authors = ["Zack M. Davis <code@zackmdavis.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
egg-mode = { git = "https://github.com/egg-mode-rs/egg-mode", rev = "6b81073eba9" }
tokio = { version = "1.6", features = ["rt", "macros"] }
